--- a/src/Extensions.DependencyInjection.Services/Extensions.DependencyInjection.Services.csproj
+++ b/src/Extensions.DependencyInjection.Services/Extensions.DependencyInjection.Services.csproj
@@ -14,9 +14,10 @@
     <RepositoryUrl>https://github.com/buzzytom/Extensions.DependencyInjection.Services</RepositoryUrl>
     <RepositoryType />
     <PackageTags>Extensions Dependency Injection Services Asp Net Core Net Standard</PackageTags>
-    <PackageReleaseNotes>Added intellisense comments.</PackageReleaseNotes>
+    <PackageReleaseNotes>Added a project icon.</PackageReleaseNotes>
     <NeutralLanguage>en</NeutralLanguage>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
+    <PackageIconUrl>https://avatars0.githubusercontent.com/u/24457121</PackageIconUrl>
   </PropertyGroup>
 
   <ItemGroup>
